testsuite/tests/parser/should_compile/T11622.hs
{-# LANGUAGE TypeFamilies #-}
module T11622 where

import Data.Kind (Type)

type family F a where
  F _ = Int :: Type
