testsuite/tests/parser/should_fail/ExplicitSpecificity4.hs
{-# LANGUAGE RankNTypes, PolyKinds, TypeFamilies #-}

module ExplicitSpecificity4 where

type family F {k} (a::k) :: *
type instance F String = Int

